--- a/src/app/pages/artdatabase/artdatabase.component.html
+++ b/src/app/pages/artdatabase/artdatabase.component.html
@@ -453,7 +453,77 @@
           </div>
         </div>
         <div id="galleries" [ngClass]="{'active': seletedTab === 'galleries'}" class="tab-pane ">
-          Galleries
+          <div class="row view-section">
+            <div class="sidebar-section">
+              <div class="input-search">
+                <span class="input-label">Search Gallery</span>
+                <br>
+                <div class="form-group has-search">
+                  <span class="fa fa-search form-control-feedback"></span>
+                  <input type="text" class="form-control" placeholder="Search by gallery">
+                </div>
+              </div>
+            </div>
+            <div class="list-section">
+              <div class="title-content row">
+                <div class="page-title">Results {{ firstitem }} - {{ enditem }} of {{totalResults}}</div>
+                <div class="spacer"></div>
+                <div class="viewmore-title">
+                  <div class="selectbox-content">
+                    <span class="sort-label">&nbsp;Sort&nbsp;by:&nbsp;</span>
+                    <ng-select [items]="sorts"
+                              bindLabel="title"
+                              bindValue="id"
+                              [(ngModel)]="selectedSort"
+                              (change)="onSort()"
+                              class="sort-content">
+                    </ng-select>
+                  </div>
+                </div>
+              </div>
+              <div class="row item-section">
+                <div class="card-content other-content" *ngFor="let gallery of galleries | paginate: config let i = index" [ngClass]="i%3==2? 'third-child': ''">
+                  <div class="image-content">
+                    <img src="../../../assets/imgs/Img4.jpg">
+                  </div>
+                  <div class="label-content">
+                    <div class="star-content">
+                      <div><span class="label-detail">{{ gallery.title }}</span></div>
+                      <div class="spacer"></div>
+                      <div class="star-section"><i class="fa fa-star-o"></i></div>
+                    </div>
+                    <span class="label-detail sub-detail">Gallery in New York, USA</span>
+                  </div>
+                </div>
+              </div>
+              <div class="pagination-section">
+                <div class="pagination-label">Results {{ firstitem }} - {{ enditem }} of {{totalResults}}</div>
+                <div class="spacer"></div>
+                <div class="pagination-content">
+                  <pagination-template #p="paginationApi"
+                     [id]="config.id"
+                     (pageChange)="pageChanged($event)">
+                    <div class="custom-pagination">
+                      <div class="pagination-previous" [class.disabled]="p.isFirstPage()">
+                        <a *ngIf="!p.isFirstPage()" (click)="p.previous()"><i class="fas fa-chevron-left"><span class="previous-label">Previous</span></i></a>
+                      </div>
+                      <div *ngFor="let page of p.pages" [class.current]="p.getCurrent() === page.value">
+                        <a (click)="p.setCurrent(page.value)" *ngIf="p.getCurrent() !== page.value">
+                          <span>{{ page.label }}</span>
+                        </a>
+                        <div *ngIf="p.getCurrent() === page.value">
+                          <span>{{ page.label }}</span>
+                        </div>
+                      </div>
+                      <div class="pagination-next" [class.disabled]="p.isLastPage()">
+                        <a *ngIf="!p.isLastPage()" (click)="p.next()"><span class="next-label">Next</span><i class="fas fa-chevron-right"></i></a>
+                      </div>
+                    </div>
+                  </pagination-template>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div id="auctions" [ngClass]="{'active': seletedTab === 'auctions'}" class="tab-pane ">
           Auctions
